<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/settings_group_order">

        <ListPreference
            android:defaultValue="@string/settings_order_by_default"
            android:entries="@array/settings_order_by_labels"
            android:entryValues="@array/settings_order_by_values"
            android:key="@string/settings_order_by_key"
            android:title="@string/settings_order_by_label" />
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/settings_group_alarm">

        <SwitchPreferenceCompat
            android:key="pref_switch"
            android:title="@string/settings_switch_label"
            android:summary="@string/settings_alarm_on"
            android:defaultValue="true" />

        <com.example.android.capstone.settings.TimePreference
            style="@style/AppPreference.DialogPreference"
            android:defaultValue="90"
            android:key="@string/settings_alarm_key"
            android:title="@string/settings_alarm_label"/>

    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>