<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.TaskEditActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_taskedit"
            style="@style/AppbarLayout"
            android:elevation="@dimen/dimen_4dp"
            tools:ignore="UnusedAttribute">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_taskedit"
                style="@style/ToolbarLayout"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>
        </android.support.design.widget.AppBarLayout>

        <TextView
            android:id="@+id/textview_error_msg"
            style="@style/EditErrorMessage"
            app:fontFamily="@font/noto_sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar_taskedit"
            tools:text="@string/error_save_msg"/>

        <EditText
            android:id="@+id/edittext_task_title"
            style="@style/EditTaskInput"
            android:hint="@string/default_edit_task_title"
            app:fontFamily="@font/noto_sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_error_msg"/>

        <FrameLayout
            android:id="@+id/flayout_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/activity_margin"
            android:background="@drawable/shape_rectangle_outline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edittext_task_title">

            <Spinner
                android:id="@+id/spinner_task_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="@dimen/textsize_small"/>
        </FrameLayout>

        <TextView
            android:id="@+id/textview_label_optional"
            style="@style/EditLabelOptional"
            android:text="@string/label_optional"
            app:fontFamily="@font/noto_sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flayout_category"/>

        <FrameLayout
            android:id="@+id/frameLayout"
            style="@style/EditSpinnerFrame"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_label_optional">

            <Spinner
                android:id="@+id/spinner_task_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="@dimen/textsize_small"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/flayout_repeat"
            style="@style/EditSpinnerFrame"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_label_optional">

            <Spinner
                android:id="@+id/spinner_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="@dimen/textsize_small"/>

        </FrameLayout>

        <ImageButton
            android:id="@+id/button_due_date"
            style="@style/EditDateTimeButton"
            android:contentDescription="@string/label_due_on"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frameLayout"
            app:srcCompat="@drawable/ic_date"/>

        <TextView
            android:id="@+id/textview_due_date"
            style="@style/EditDateTime"
            android:text="@string/label_due_on"
            app:fontFamily="@font/noto_sans"
            app:layout_constraintLeft_toRightOf="@id/button_due_date"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"/>

        <ImageButton
            android:id="@+id/button_due_time"
            style="@style/EditDateTimeButton"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:contentDescription="@string/label_at_time"
            app:layout_constraintRight_toLeftOf="@id/textview_due_time"
            app:layout_constraintTop_toBottomOf="@id/frameLayout"
            app:srcCompat="@drawable/ic_time"/>

        <TextView
            android:id="@+id/textview_due_time"
            style="@style/EditDateTime"
            android:layout_width="@dimen/dimen_60dp"
            android:text="@string/label_at_time"
            app:fontFamily="@font/noto_sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/textview_due_date"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"/>

        <FrameLayout
            android:id="@+id/flayout_extra_info"
            style="@style/EditExtraSpinnerFrame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_due_date">

            <Spinner
                android:id="@+id/spinner_extra_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="@dimen/textsize_small"/>
        </FrameLayout>

        <TextView
            android:id="@+id/textview_extra_info"
            style="@style/EditExtraText"
            app:fontFamily="@font/noto_sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flayout_extra_info"/>

        <TextView
            android:id="@+id/textview_alert_msg"
            style="@style/ExtraInfoAlert"
            android:text="@string/info_location_policy"
            app:fontFamily="@font/noto_sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_extra_info"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_60dp"
            android:layout_marginTop="@dimen/dimen_60dp"
            android:paddingBottom="@dimen/dimen_60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_extra_info"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>